[package]
name = "project_be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.6"
actix-multipart = "0.5"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = "2.1"
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.10"
jsonwebtoken = "8.1"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
lettre = "0.10.0"
uuid = { version = "1.3", features = ["v4"] }
rand = "0.8"
validator = { version = "0.16", features = ["derive"] }
axum = { version = "0.7", features = ["multipart"] } # Jika Anda tidak menggunakannya, hapus ini
bytes = "1.0"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1" 

